2008-05-19  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/plugindata.h, src/plugins.c, doc/plugin-symbols.c,
   plugins/export.c, plugins/vcdiff.c, plugins/demoplugin.c,
   plugins/filebrowser.c, plugins/htmlchars.c, plugins/autosave.c,
   plugins/pluginmacros.h, plugins/classbuilder.c:
   Note: this breaks the plugin API.
   Split GeanyFunctions out of GeanyData so data pointers can be
   appended before the function pointer structs without breaking the
   ABI.
   Rename GeanyFunctions fields with a p_ prefix to avoid name
   conflicts.
   Add new plugin symbol geany_functions.
   Nearly all plugins will now need to declare the following:
   'GeanyFunctions *geany_functions;', which is now used by
   pluginmacros.h.
   Add doxygen examples for geany_data and geany_functions.
   Move deprecated document and filetype typedefs to src/plugindata.h,
   as plugins aren't required to use pluginmacros.h.
   Initialize geany_data by copying a stack struct so the compiler can
   check for any missing field initializers.
   Rename plugin macro p_encoding to p_encodings to follow the core
   function encodings_ prefix.
 * src/msgwindow.c, src/editor.c:
   Fix doxygen-1.4.6 warnings about undocumented function parameters
   when using documentation comments e.g. for TODO.
 * plugins/pluginmacros.h:
   Add deprecated p_encoding alias for p_encodings.
 * src/keybindings.c:
   Fix Switch to Sidebar shortcut so that it works for whichever widget
   is in the current sidebar notebook page (fixes #1967104).
 * doc/Doxyfile.in, plugins/pluginmacros.h:
   Add API documentation for pluginmacros.h.
   Make Doxygen define GEANY_DISABLE_DEPRECATED.
 * doc/plugins.dox:
   Add Main Page links to plugindata.h and pluginmacros.h.


2008-05-18  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/document.c:
   Force using tabs for indentation when opening Makefiles.
 * plugins/pluginmacros.h:
   Define p_editor in the right way, oops.